add cart and thanh toan hoa don

--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -26,6 +26,6 @@
 </div>
 <!--phan cua footer-->
 {% include 'layout/footer.html' %}
-
+<script src="{{url_for('static', filename='js/cart.js') }}"></script>
 </body>
 </html>
