--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,21 +2,29 @@
 
 {% block content %}
 <section class="container">
+    <ul class="pagination mt-1">
+        {% for i in range(pages) %}
+  <li class="page-item"><a class="page-link" href="/?page={{i + 1}}">{{ i + 1}}</a></li>
+        {% endfor %}
+</ul>
+
     <div class="row">
         {% for p in products %}
         <div class="col-xs-12 col-md-3">
             <div class="card" style="margin: 10px">
                 <img class="card-img-top" src = "{{ p.image }}" alt="Card image">
-                <div class="card-body">
+                <div class="card-body font-title">
                     <h4 class="card-title">{{ p.name }}</h4>
                     <p class="card-text">{{ p.price }} VNĐ</p>
                     <a href="#" class="btn btn-primary">Xem chi tiết</a>
-                    <a href="#" class="btn btn-danger">Đặt hàng</a>
+                    <a href="#" onclick="addToCart({{p.id}}, '{{p.name}}', '{{p.price}}')" class="btn btn-danger">Đặt hàng</a>
                 </div>
             </div>
         </div>
         {% endfor %}
     </div>
 </section>
+
+
 
 {% endblock %}
