--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link active" href="#">
+                <a class="nav-link active" href="/">
                     <img src="https://theme.hstatic.net/200000421745/1000900421/14/logo__footer.png?v=152"/>
                 </a>
             </li>
@@ -15,10 +15,16 @@
             {% for c in categories %}
             <div class="header-mg">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">{{c.name}}</a>
+                    <a class="nav-link" href="/?cate_id={{c.id}}">{{c.name}}</a>
                 </li>
             </div>
             {% endfor %}
+            <div class="header-mg">
+                    <li class="nav-item">
+                    <a class="nav-link text-danger" href="/cart">&#128722; Giỏ hàng <span class="badge bg-danger cart-counter">{{ cart.total_quantity }}</span></a>
+                </li>
+            </div>
+
 
         </ul>
         <form class="d-flex" method="get" action="/">
