--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -32,7 +32,11 @@
 </div>
 
 <div>
+    {% if current_user.is_authenticated %}
     <button class="btn btn-success">Thanh toán</button>
+    {% else %}
+    <p>Vui lòng <a href="/login?next=/cart">đăng nhập</a> để thanh toán!</p>
+    {% endif %}
     <br><br>
 </div>
 
